Fixed body/scroll height on mobile

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -119,7 +119,8 @@
 }
 
 body {
-  min-height: 100vh;
+  height: 100%;
+  min-height: 100%;
   color: var(--color-text);
   background: var(--color-background);
   transition:
