--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,8 +1,12 @@
 @import './base.css';
 
+html {
+  height: 100%;
+}
+
 #app {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   font-weight: normal;
 }
 
